--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "styled-components": "^6.1.15",
+    "swiper": "^11.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
