--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify/react": "^5.2.1",
     "@mui/material": "^7.0.2",
     "axios": "^1.7.9",
+    "lucide-react": "^0.488.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
@@ -35,6 +36,6 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^6.3.2"
   }
 }
